# rules_syft

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  internal_deps.bzl  renovate.json
.bcr/: config.yml  metadata.template.json  source.template.json
.github/: FUNDING.yml
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  generate.md  grype_report.md  grype_test.md  multiarch-example.md  syft_sbom.md
e2e/bzlmod/: BUILD  MODULE.bazel  WORKSPACE.bazel
e2e/container/: BUILD.bazel  WORKSPACE.bazel  fetch.bzl
e2e/generate/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  container_validator.sh  fetch.bzl  internal_deps.bzl  sbom.json.result.image  sbom.json.result.tarball
e2e/grype_database_name/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/smoke/: BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/syft_sbom_deprecation/: BUILD.bazel  WORKSPACE.bazel
grype/: BUILD.bazel  database.bzl  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
grype/private/: BUILD.bazel  file_mappings.bzl  grype.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
syft/: BUILD.bazel  defs.bzl  dependencies.bzl  extensions.bzl  providers.bzl  repositories.bzl  toolchain.bzl
syft/private/: BUILD.bazel  file_mappings.bzl  generate.bzl  generate.sh.tpl  mappings.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  util.bzl  versions.bzl
tools/: get_release.sh  requirements.txt  update_tool_versions.py  update_tool_versions.sh
