"ihavespoons/rules_syft"

module(
  name = "rules_syft",
  version = "0.0.0",
  compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True)
bazel_dep(name = "rules_oci", version = "1.4.0", dev_dependency = True)
