load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "syft_sbom",
    bzl_library_target = "//syft:defs",
    symbol_names = [
        "syft_sbom"
    ]
)

stardoc_with_diff_test(
    name = "grype_report",
    bzl_library_target = "//grype:defs",
    symbol_names = [
        "grype_report"
    ]
)

stardoc_with_diff_test(
    name = "grype_test",
    bzl_library_target = "//grype:defs",
    symbol_names = [
        "grype_test"
    ]
)

update_docs(
    name = "update",
)
