workspace(name = "rules_syft_smoke_test")

local_repository(
    name = "rules_syft",
    path = "../../",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@rules_syft//syft:repositories.bzl", "syft_register_toolchains")

syft_register_toolchains(
    "syft",
    syft_version = "0.96.0",
)

http_archive(
    name = "rules_oci",
    sha256 = "21a7d14f6ddfcb8ca7c5fc9ffa667c937ce4622c7d2b3e17aea1ffbc90c96bed",
    strip_prefix = "rules_oci-1.4.0",
    url = "https://github.com/bazel-contrib/rules_oci/releases/download/v1.4.0/rules_oci-v1.4.0.tar.gz",
)

load("@rules_oci//oci:dependencies.bzl", "rules_oci_dependencies")

rules_oci_dependencies()

load("@rules_oci//oci:repositories.bzl", "LATEST_CRANE_VERSION", "oci_register_toolchains")

oci_register_toolchains(
    name = "oci",
    crane_version = LATEST_CRANE_VERSION,
)

load("@rules_oci//oci:pull.bzl", "oci_pull")

oci_pull(
    name = "dockerhub_ubuntu",
    digest = "sha256:c9cf959fd83770dfdefd8fb42cfef0761432af36a764c077aed54bbc5bb25368",
    image = "docker.io/library/ubuntu",
)
