load("@rules_syft//syft:defs.bzl", "syft_generate_sbom")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

oci_image(
    name = "dockerhub_ubuntu",
    base = "@dockerhub_ubuntu",
)

syft_generate_sbom(
    name = "generate_sbom_imagedir",
    image = ":dockerhub_ubuntu",
    type = "cyclonedx-json",
)

sh_test(
    name = "imagedir_generate_sbom_test",
    srcs = ["container_validator.sh"],
    args = [
        "$(location :generate_sbom_imagedir)",
        "$(location :sbom.json.result.image)",
    ],
    data = [
        ":generate_sbom_imagedir",
        ":sbom.json.result.image",
    ],
)

oci_tarball(
    name = "dockerhub_ubuntu_tarball",
    image = ":dockerhub_ubuntu",
    repo_tags = [],
)

syft_generate_sbom(
    name = "generate_sbom_tarball",
    image = ":dockerhub_ubuntu_tarball",
    type = "cyclonedx-json",
)

sh_test(
    name = "tarball_generate_sbom_test",
    srcs = ["container_validator.sh"],
    args = [
        "$(location :generate_sbom_tarball)",
        "$(location :sbom.json.result.tarball)",
    ],
    data = [
        ":generate_sbom_tarball",
        ":sbom.json.result.tarball",
    ],
)
