workspace(name = "rules_syft_generate_test")

local_repository(
    name = "rules_syft",
    path = "../../",
)

load("@rules_syft//syft:repositories.bzl", "syft_register_toolchains")

syft_register_toolchains("syft")

load(":internal_deps.bzl", "generate_test_internal_deps")

generate_test_internal_deps()

load("@rules_oci//oci:dependencies.bzl", "rules_oci_dependencies")

rules_oci_dependencies()

load("@rules_oci//oci:repositories.bzl", "LATEST_CRANE_VERSION", "oci_register_toolchains")

oci_register_toolchains(
    name = "oci",
    crane_version = LATEST_CRANE_VERSION,
    # Uncommenting the zot toolchain will cause it to be used instead of crane for some tasks.
    # Note that it does not support docker-format images.
    # zot_version = LATEST_ZOT_VERSION,
)

load(":fetch.bzl", "fetch_images")

fetch_images()
