load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "grype",
    srcs = ["grype.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//grype:__subpackages__",
    ],
    deps = [
        ":file_mappings",
        "//grype:database",
        "//syft:providers",
        "@aspect_bazel_lib//lib:paths",
    ],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//grype:__subpackages__"],
)

bzl_library(
    name = "file_mappings",
    srcs = ["file_mappings.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//grype:__subpackages__",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = [
        "//grype:__subpackages__",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = [
        "//grype:__subpackages__",
    ],
)
