load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

exports_files([
    "generate.sh.tpl",
])

bzl_library(
    name = "generate",
    srcs = ["generate.bzl"],
    visibility = [
        "//syft:__subpackages__",
    ],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//syft:__subpackages__"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//syft:__subpackages__"],
)
