load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "generate",
    srcs = ["generate.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//syft:__subpackages__",
    ],
    deps = [
        ":file_mappings",
    ],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//syft:__subpackages__"],
)

bzl_library(
    name = "file_mappings",
    srcs = ["file_mappings.bzl"],
    visibility = [
        "//docs:__pkg__",
        "//syft:__subpackages__",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = [
        "//syft:__subpackages__",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = [
        "//syft:__subpackages__",
    ],
)
